# blueprint

./: .build-constraints.txt  .codegen.json  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Makefile  NOTICE  README.md  labs.yml  pyproject.toml
.github/: dependabot.yml
.github/actions/jfrog-auth/: action.yml  jfrog-auth
.github/scripts/: lint-uv
.github/workflows/: acceptance.yml  downstreams.yml  nightly.yml  no-cheat.yml  push.yml  release.yml
src/databricks/: __init__.py
src/databricks/labs/blueprint/: __about__.py  __init__.py  __main__.py  _logging_context.py  _posixpath.py  cli.py  commands.py  entrypoint.py  installation.py  installer.py  limiter.py  logger.py  parallel.py  paths.py  tui.py  upgrades.py  wheels.py
src/databricks/labs/blueprint/migrations/: v0.0.1_add_user.py  v0.0.1_other.py  v0.1.3_other.py  v0.2.0_another_breaking_change.py
src/databricks/labs/blueprint/paths/: __init__.py  _base.py  dbfs.py  workspace.py
tests/integration/: conftest.py  test_installation.py  test_installer.py  test_paths.py  test_upgrades.py  test_wheels.py
tests/integration/fixtures/simple_upgrades/upgrades/: v0.1.3_other.py  v0.2.0_another_breaking_change.py  v7.4.7_anything.py  veryignored.py
tests/unit/: __init__.py  conftest.py  no_cheat.py  test_cli.py  test_commands.py  test_entrypoint.py  test_installation.py  test_installer.py  test_limiter.py  test_logger.py  test_logger_context.py  test_marshalling.py  test_marshalling_scenarios.py  test_parallel.py  test_paths.py  test_tui.py  test_upgrades.py  test_useragent.py  test_wheels.py
tests/unit/fixtures/no_upgrades/: __init__.py
tests/unit/fixtures/some/: __about__.py
tests/unit/fixtures/with_upgrades/upgrades/: v0.0.1_add_user.py  v0.0.1_other.py  v0.1.3_other.py  v0.2.0_another_breaking_change.py  v7.4.7_anything.py
