[project]
name = "databricks-labs-blueprint"
dynamic = ["version"]
description = 'Common libraries for Databricks Labs'
readme = "README.md"
license-files = { paths = ["LICENSE", "NOTICE"] }
requires-python = ">=3.10.6" # latest available in DBR 13.2
keywords = ["Databricks"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["databricks-sdk>=0.16.0"]

[project.urls]
Issues = "https://github.com/databrickslabs/blueprint/issues"
Source = "https://github.com/databrickslabs/blueprint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]
include = ["src"]

[tool.hatch.version]
path = "src/databricks/labs/blueprint/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
    "pytest-xdist",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.0.0,<4.0.0",
    "pytest-timeout",
    "ruff>=0.0.243",
    "isort>=2.5.0",
    "mypy",
    "types-PyYAML",
    "types-requests",
]

python="3.10"

# store virtual env as the child of this folder. Helps VSCode (and PyCharm) to run better
path = ".venv"

[tool.hatch.envs.default.scripts]
test        = "pytest -n auto --cov src --cov-report=xml --timeout 30 tests/unit --durations 20"
coverage    = "pytest -n auto --cov src tests/unit --timeout 30 --cov-report=html --durations 20"
integration = "pytest -n 10 --cov src tests/integration --durations 20"
fmt         = ["isort .",
               "ruff format",
               "ruff  . --fix",
               "mypy ."]
verify      = ["black --check .",
               "isort . --check-only",
               "ruff .",
               "mypy ."]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-s -p no:warnings -vv --cache-clear"
cache_dir = ".venv/pytest-cache"

[tool.black]
target-version = ["py310"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
cache-dir = ".venv/ruff-cache"
target-version = "py310"
line-length = 120

[tool.ruff.isort]
known-first-party = ["databricks.labs.blueprint"]

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
omit = ["*/working-copy/*", 'src/databricks/labs/blueprint/__main__.py']
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]